fixed parallax and spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: black;
-    color: rgba(255,255,255,0.8);
+    color: rgba(255, 255, 255, 0.925);
 }
 #landing{
     height: 100vh;
@@ -15,19 +15,31 @@ body {
     margin-top: 30vh;
 }
 .parallax-container {
-    height: 150;
+    clear: both;
+    height: 150px;
   }
-.row .col.s12 {
-    margin-top: 100px;
-}
+/* .row .col.s12 {
+    margin-top: 25%;
+} */
 
 .row.center {
     margin-top: 100;
 }
-.row .col.l3 {
-    width: 5%;
-    margin-left: 5%;
+
+.img.left {
+    margin-right: 5%;
+    margin-bottom: 10%;
 }
-.activator {
-    size: 150 150;
+
+.card-image{
+    height: 200px; 
+    overflow: hidden;
+}
+
+/* .activator {
+    height: 50%;
+} */
+
+.p1Quote {
+    margin-top: 20%;
 }
